[USER-SERVICE] - Add jwt authentication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,5 +13,16 @@ services:
     volumes:
       - shared_pgdata:/var/lib/postgresql/data
 
+  user-service:
+    build: ./user-service
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/restaurant-review
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: admin
+    ports:
+      - "8080:8080"
+
 volumes:
   shared_pgdata:
