--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=user-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant-review
-spring.datasource.username=admin
-spring.datasource.password=admin
+
+#Dev
+#spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant-review
+#spring.datasource.username=admin
+#spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+security.permit-all-endpoints=/users/register,/users/login
+
+#Dev
+#jwt.secret=mysecretkeyjwt1234567890abcdefghz
+jwt.expiration=3600000
