--- a/review-service/src/main/resources/application.properties
+++ b/review-service/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+#Dev
+#jwt.secret=mysecretkeyjwt1234567890abcdefghz
+
 server.port=8081
