--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,16 @@ services:
     ports:
       - "8080:8080"
 
+  review-service:
+    build: ./review-service
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/restaurant-review
+      SPRING_DATASOURCE_USERNAME: admin
+      SPRING_DATASOURCE_PASSWORD: admin
+    ports:
+      - "8081:8081"
+
 volumes:
   shared_pgdata:
