--- a/review-service/src/main/resources/application.properties
+++ b/review-service/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=review-service
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant-review
-spring.datasource.username=admin
-spring.datasource.password=admin
+#Dev
+#spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant-review
+#spring.datasource.username=admin
+#spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
