--- a/review-service/src/main/resources/application.properties
+++ b/review-service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8081
+
+spring.cache.cache-names=reviews
+spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
