--- a/restaurant-frontend/package.json
+++ b/restaurant-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@reduxjs/toolkit": "^2.7.0",
+    "axios": "^1.9.0",
     "lucide-react": "^0.501.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
